<resources>
    <string name="app_name">MyBTI</string>
    <string name="title_ActivityMain">테스트 목록</string>
    <string name="Button_MakingTest">테스트 만들기</string>
    <string name="SampleB_1">샘플 테스트 1</string>
    <string name="SampleB_2">샘플 테스트 2</string>
    <string name="Start_Button">시작!</string>
    <string name="Sample_IMG">TODO</string>
    <string name="Sample_Titel">샘플 테스트 이름 입니다!</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="Result">ENTP 포메라니안</string>
    <string name="todo">TODO</string>
    <string name="Result_longT">여기에 설명이 들어갑니다 여기에 설명이 들어갑니다\n\n여기에 설명이 들어갑니다 여기에 설명이 들어갑니다\n\n여기에 설명이 들어갑니다 여기에 설명이 들어갑니다\n\n여기에 설명이 들어갑니다 여기에 설명이 들어갑니다\n\n여기에 설명이 들어갑니다 여기에 설명이 들어갑니다</string>
    <string name="Button_toMain">메인으로</string>
    <string name="Button_Again">다시하기</string>
    <string name="Button_share">공유하기</string>
    <string name="todo">TODO</string>
    <string name="Result_text">여기에 설명이 들어갑니다</string>
    <string name="todo">TODO</string>
    <string name="dog">당연히 순둥순둥 강아지가 짱!</string>
    <string name="cat">아니지 도도한 고양이가 최고!</string>
    <string name="num">1번 질문</string>
    <string name="que">질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문 질문질문</string>
    <string name="tank">아군을 지켜주는 든든한 탱커</string>
    <string name="deal">이게임은 내가 캐리한다 딜러</string>
    <string name="soju">나는 소주파</string>
    <string name="beer">나는 맥주파</string>
    <string name="zzam">나는 짬뽕</string>
    <string name="zza">나는 짜장면</string>
    <string name="_2">2번 문제</string>
    <string name="num2">2번 질문</string>
    <string name="num3">3번 질문</string>
    <string name="num4">4번 질문</string>
</resources>