<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:layout_marginBottom="29dp"
        app:srcCompat="@mipmap/ppomi"
        tools:srcCompat="@mipmap/ppomi" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/nexonfootballgothicl"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/que" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_edge"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="40dp">

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edge_button"
            android:backgroundTint="#F4F7FE"
            android:fontFamily="@font/nexonfootballgothicl"
            android:paddingHorizontal="10dp"
            android:paddingVertical="50dp"
            android:text="@string/cat"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edge_button"
            android:backgroundTint="#F4F7FE"
            android:fontFamily="@font/nexonfootballgothicl"
            android:paddingHorizontal="10dp"
            android:paddingVertical="50dp"
            android:text="@string/dog"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
